--- a/site/guide/model-documentation/_add-content-blocks.qmd
+++ b/site/guide/model-documentation/_add-content-blocks.qmd
@@ -1,3 +1,5 @@
+
+:::: {.content-visible unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
@@ -9,3 +11,17 @@
 1. Hover your mouse over the space where you want your new block to go until a horizontal line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
 
     ![Adding a content block in the {{< var validmind.platform >}}](/guide/model-documentation/add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the ValidMind Platform" .screenshot}
+
+::::
+
+
+<!-- VISIBLE IN TRAINING SLIDES ONLY -->
+
+:::: {.content-hidden unless-format="revealjs"}
+In any section of your model documentation, hover your mouse over the space where you want your new block to go until a horizontal line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
+
+  ![Adding a content block in the UI](/guide/model-documentation/add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the UI" .screenshot}
+
+After adding the block to your documentation, generate a content draft with AI using the [content editing toolbar](/guide/model-documentation/work-with-content-blocks.qmd#content-editing-toolbar){target="_blank"}:
+
+::::
