--- a/site/guide/model-documentation/work-with-test-results.qmd
+++ b/site/guide/model-documentation/work-with-test-results.qmd
@@ -25,35 +25,7 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 <!-- {{< include /guide/model-documentation/_add-content-blocks.qmd >}} -->
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^4]
-
-3. In the left sidebar that appears for your model, under {{< fa file >}} Documents select **Documentation**, **Validation Report**, or **Ongoing Monitoring**.[^5]
-
-4. Click on a section header to expand that section and add content.
-
-5. Hover your mouse over the space where you want your new block to go until a horizontal line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
-
-    ![Adding a content block in the {{< var validmind.platform >}}](add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the ValidMind Platform" .screenshot}
-
-6. Click {{< fa square-plus >}} and then select **Test-Driven**[^6] under [from library]{.smallcaps}.
-
-    - By default, the [{{< fa code >}} Developer]{.bubble} role can add test-driven blocks within model documentation or ongoing-monitoring plans.
-    - By default, the [{{< fa circle-check >}} Validator]{.bubble} role can add test-driven blocks within validation reports.
-
-7. Select test results:
-
-   - Choose from available **VM Library** (out-of-the-box) or **Custom** tests under [test-driven]{.smallcaps} in the left sidebar of the test selection modal.
-   - Use **{{<fa magnifying-glass >}} Search by name** on the top-left to locate specific test results.
-
-    ![Test-driven blocks that have been selected for insertion](test-driven-block-menu.png){fig-alt="A screenshot showing several test-driven blocks that have been selected for insertion" .screenshot}
-
-   To preview what is included in a test, click on it. By default, the actively selected test is reviewed.
-
-8. Click **Insert # Test Results to Document** when you are ready.
-
-9. After inserting the results into your document, click on the text to make changes or add comments,[^7] or configure what is displayed on the test result.[^8]
+{{< include _add-test-results.qmd >}}
 
 ### Configure test result displays
 
@@ -61,7 +33,7 @@ Once added to your model documentation, validation reports, and ongoing monitori
 
 1. Locate the test result whose display you want to configure, and hover over it until the result block's toolbar appears in the top right-hand corner.
 
-2. Select **{{< fa gear >}} Configure** and toggle the following options on or off as desired:[^9]
+2. Select **{{< fa gear >}} Configure** and toggle the following options on or off as desired:[^4]
 
     - **[hide title]{.smallcaps}** — Title
     - **[hide text]{.smallcaps}** — Description
@@ -75,9 +47,9 @@ Once added to your model documentation, validation reports, and ongoing monitori
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^10]
+2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, under {{< fa file >}} Documents and select **Documentation**, **Validation Report**, or **Ongoing Monitoring**.[^11]
+3. In the left sidebar that appears for your model, under {{< fa file >}} Documents and select **Documentation**, **Validation Report**, or **Ongoing Monitoring**.[^6]
 
 {{< include /guide/model-documentation/_view-test-result-metadata.qmd >}}
 
@@ -120,17 +92,7 @@ Filters can be removed from the list of test result metadata by clicking on the 
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^5]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
-
-[^6]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
-
-[^7]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
-
-[^8]: [Configure test result displays](#configure-test-result-displays)
-
-[^9]:
+[^4]:
 
     ::: {.callout}
     ## Options displayed for each test result will depend on what was logged via the {{< var validmind.developer >}} for your test.
@@ -141,6 +103,6 @@ Filters can be removed from the list of test result metadata by clicking on the 
 
     :::
 
-[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^11]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^6]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
