--- a/site/guide/templates/_customize-document-templates.qmd
+++ b/site/guide/templates/_customize-document-templates.qmd
@@ -45,7 +45,7 @@
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-Customize {{< var vm.product >}}'s templates for model documentation, validation reports, and ongoing monitoring reports to fit your specific case-by-case needs, such as type or complexity of model or model use case.
+Customize {{< var vm.product >}}'s templates for model documents to fit your specific case-by-case needs, such as type or complexity of model or model use case.
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
