--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -179,11 +179,7 @@ Make qualitative edits
 
 ### Add content blocks
 
-In any section of your model documentation, hover your mouse over the space where you want your new block to go until a horizontal line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
-
-  ![Adding a content block in the UI](/guide/model-documentation/add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the UI" .screenshot}
-
-After adding the block to your documentation, generate a content draft with AI using the [content editing toolbar](/guide/model-documentation/work-with-content-blocks.qmd#content-editing-toolbar){target="_blank"}:
+{{< include /guide/model-documentation/_add-content-blocks.qmd >}}
 
 {{< include /guide/model-documentation/content_blocks/_generate-with-ai.qmd >}}
 
