--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -285,25 +285,7 @@ Work with test results
 ::: {.column width="70%" .bl .pl4 .f4}
 #### Add individual test results to model documentation
 
-With the test results logged, let's head to the model we connected to at the beginning of this notebook and insert our test results into the documentation:
-
-1. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
-
-2. In the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
-
-3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
-
-4. Hover under the Pearson Correlation Matrix content block until a horizontal line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
-
-5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
-
-    - Click on **VM Library** under [test-driven]{.smallcaps} in the left sidebar.
-    - In the search bar, type in `HighPearsonCorrelation`.
-    - Select `HighPearsonCorrelation:balanced_raw_dataset` as the test.
-
-6. Finally, click **Insert 1 Test Result to Document** to add the test result to the documentation.
-
-    Confirm that the individual results for the high correlation test has been correctly inserted into section **2.3 Correlations and Interactions** of the documentation.
+{{< include /guide/model-documentation/_add-test-results.qmd >}}
 
 :::
 ::::
