--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -294,7 +294,7 @@ Work with templates
 
 :::
 
-## Duplicate documentation templates
+## Duplicate document templates
 
 {{< include /guide/templates/_duplicate-template.qmd >}}
 
