--- a/site/notebooks/EXECUTED/model_development/2-start_development_process.ipynb
+++ b/site/notebooks/EXECUTED/model_development/2-start_development_process.ipynb
@@ -683,7 +683,7 @@
     "\n",
     "1. From the **Inventory** in the ValidMind Platform, go to the model you connected to earlier.\n",
     "\n",
-    "2. In the left sidebar that appears for your model, click **Documentation**.\n",
+    "2. In the left sidebar that appears for your model, click **Documentation** under Documents.\n",
     "\n",
     "3. Locate the Data Preparation section and click on **2.3. Correlations and Interactions** to expand that section.\n",
     "\n",
