--- a/site/notebooks/code_samples/nlp_and_llm/hugging_face_summarization_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/hugging_face_summarization_demo.ipynb
@@ -320,7 +320,7 @@
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way: view the prompt validation test results as part of your model documentation in the ValidMind Platform:\n",
     "\n",
-    "1. In the ValidMind Platform, go to the **Documentation** page for the model you registered earlier. ([Need more help?](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
+    "1. In the ValidMind Platform, click **Documentation** under Documents for the model you registered earlier. ([Need more help?](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
     "\n",
     "2. Expand **2. Data Preparation** or **3. Model Development** to review all test results.\n",
     "\n",
