--- a/site/notebooks/how_to/run_tests/1_run_dataset_based_tests.ipynb
+++ b/site/notebooks/how_to/run_tests/1_run_dataset_based_tests.ipynb
@@ -442,7 +442,7 @@
     "\n",
     "The previous result shows that the test didn't pass the threshold of 20% for class imbalance. With these results logged, you can now add them to your model documentation:\n",
     "\n",
-    "1. In the ValidMind Platform, go to the **Documentation** page for the model you registered earlier. ([Need more help?](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
+    "1. In the ValidMind Platform, click **Documentation** under Documents for the model you registered earlier. ([Need more help?](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
     "\n",
     "2. Expand the **2.1. Data Description** section.\n",
     "\n",
