--- a/site/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb
+++ b/site/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb
@@ -908,7 +908,7 @@
     "\n",
     "1. From the **Inventory** in the ValidMind Platform, go to the model you connected to earlier.\n",
     "\n",
-    "2. In the left sidebar that appears for your model, click **Documentation**.\n",
+    "2. In the left sidebar that appears for your model, click **Documentation** under Documents.\n",
     "\n",
     "3. Locate the Data Preparation section and click on **3.2. Model Evaluation** to expand that section.\n",
     "\n",
