--- a/site/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb
+++ b/site/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb
@@ -339,7 +339,7 @@
     "\n",
     "2. In the left sidebar, navigate to **Inventory** and select the model you registered for this \"ValidMind for model validation\" series of notebooks.\n",
     "\n",
-    "3. Click on the **Validation Report** for your model and note:\n",
+    "3. Click **Validation Report** under Documents for your model and note:\n",
     "\n",
     "    - [x] The risk assessment compliance summary at the top of the report (screenshot below)\n",
     "    - [x] How the structure of the validation report reflects the previewed template\n",
