Simplify info for when you have basic user access

--- a/site/guide/configuration/log-in-to-validmind.qmd
+++ b/site/guide/configuration/log-in-to-validmind.qmd
@@ -88,7 +88,7 @@ One of the following two options will apply:
 
 - You might have only the [{{< fa wrench >}} Basic User]{.bubble} role with very limited access.
 - You will see a message prompting you to contact an administrator. 
-- An administrator must assign you to one or more groups[^2] and grant you the appropriate roles.[^3]
+- An administrator must provide you with the necessary access for your role.
 
 Once you have the necessary access, you can work with models and workflows and perform actions such as editing documentation, running tests, or completing validations.
 
@@ -103,11 +103,3 @@ To configure and log in through a private link for your company VPC using a supp
 ## What's next
 
 - [Personalize {{< var vm.product >}}](personalize-validmind.qmd)
-
-<!-- FOOTNOTES -->
-
-<!-- NR
-[^1] is defined in _validmind-public-internet.qmd, FYI. 
--->
-[^2]: [Manage users](/guide/configuration/manage-users.qmd)
-[^3]: [Manage roles](/guide/configuration/manage-roles.qmd)
