New access section

--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -124,12 +124,14 @@ Our guides offer step-by-step instructions for frequent tasks you perform within
 
 :::
 
-## Configuration
+## Access
 
 Before you begin, let's make sure you're able to access {{< var vm.product >}}:
 
 :::{#guides-login}
 :::
+
+## Configuration
 
 Onboard your organization, teams or business units, and users onto the {{< var validmind.platform >}}:
 
