--- a/site/guide/access/log-in-to-validmind.qmd
+++ b/site/guide/access/log-in-to-validmind.qmd
@@ -14,6 +14,7 @@ listing:
       - configure-google-private-service-connect.qmd
 aliases:
   - log-into-validmind.html
+  - /guide/configuration/log-in-to-validmind.html
 ---
 
 Log in to our cloud-hosted {{< var validmind.platform >}} to work with your model documentation, prepare validation reports, or to configure {{< var vm.product >}} for your organization.
