--- a/site/guide/access/register-with-validmind.qmd
+++ b/site/guide/access/register-with-validmind.qmd
@@ -2,6 +2,8 @@
 # USING THE VARIABLE IN THE TITLE MESSES UP THE BREADCRUMB
 title: "Register with ValidMind"
 date: last-modified
+aliases: 
+  - /guide/configuration/register-with-validmind.html
 ---
 
 Register with our cloud-hosted {{< var validmind.platform >}}, so you can begin working with model documentation or configure {{< var vm.product >}} for your organization.
