--- a/site/guide/access/register-with-validmind.qmd
+++ b/site/guide/access/register-with-validmind.qmd
@@ -102,9 +102,9 @@ b. `validmind.com`
 
 ## What's next
 
-- [Managing your organization](managing-your-organization.qmd)
-- [Managing users](managing-users.qmd)
-- [Personalize {{< var vm.product >}}](personalize-validmind.qmd)
+- [Managing your organization](/guide/configuration/managing-your-organization.qmd)
+- [Managing users](/guide/configuration/managing-users.qmd)
+- [Personalize {{< var vm.product >}}](/guide/configuration/personalize-validmind.qmd)
 
 
 <!-- FOOTNOTES -->
@@ -124,8 +124,8 @@ b. `validmind.com`
 
 [^5]: [User invitations](/guide/configuration/manage-users.qmd#user-invitations)
 
-[^6]: [Manage roles](manage-roles.qmd)
+[^6]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
-[^7]: [Customize your dashboard](customize-your-dashboard.qmd)
+[^7]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd)
 
 [^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
