--- a/site/get-started/get-started.qmd
+++ b/site/get-started/get-started.qmd
@@ -4,6 +4,7 @@ date: last-modified
 sidebar: false
 page-layout: full
 toc: false
+repo-actions: false
 aliases:
   - ../guide/get-started.html
   - ../get-started/index.html
