--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -26,6 +26,7 @@ listing:
     fields: [title, description]
     contents:
     - configuration/personalize-validmind.qmd
+    - configuration/manage-platform-notifications.qmd
   - id: guides-model-workflows
     type: grid
     max-description-length: 250
@@ -138,7 +139,7 @@ Onboard your organization, teams or business units, and users onto the {{< var v
 :::{#guides-configuration}
 :::
 
-Customize your personal user experience within the {{< var validmind.platform >}}:
+Customize your personal user experience and the notifications your organization's users receive from the {{< var validmind.platform >}}:
 
 :::{#guides-customize}
 :::
