Outline for Manage platform notifications

--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -3,7 +3,7 @@ title: "Manage platform notifications"
 date: last-modified
 ---
 
-Customize what you see on the {{< var validmind.platform >}} when you first log in with dashboards and widgets, enabling you to review and access information at a glance. 
+View <!-- and customize --> the notifications sent by the {{< var validmind.platform >}} to your organization's users.
 
 :::{.callout}
 Changes are automatically saved to your account and do not affect other users.
@@ -14,156 +14,17 @@ Changes are automatically saved to your account and do not affect other users.
 ## Prerequisites
 
 - [x] {{< var link.login >}}
+<!-- - [x] To customize platform notifications, you must be a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions.[^1] -->
 
 :::
 
-## Manage dashboards
+## View platform notifications
 
-Dashboards allow you to use widgets to quickly review and access information by displaying widgets.
+<!-- CUSTOMIZATION DOESN'T EXIST YET -->
 
-### Add dashboards
-
-1. In the left sidebar, click **{{< fa home >}} Dashboard**.
-
-2. Click **{{< fa plus>}} Add Dashboard**.
-
-3. On the Add New Dasboard modal that appears, enter the:
-
-    - **[dashboard name]{.smallcaps}**
-    - **[description]{.smallcaps}** (optional)
-
-4. Click **Add New Dashboard** to create your dashboard.
-
-5. Once created, [add widgets to your dashboard](#manage-widgets).
-
-### Edit or remove dashboards
-
-::: {.callout-important}
-Deletion of dashboards is permanent.
-
-:::
-
-1. In the left sidebar, click **{{< fa home >}} Dashboard**.
-
-2. Click on the tab for the dashboard you would like to edit or remove.
-
-3. Click **{{< fa pencil >}} Edit Dashboard**:
-
-::: {.panel-tabset}
-
-#### Edit dashboard details
-
-a. Select **{{< fa pencil >}} Details** to edit a **[dashboard name]{.smallcaps}**  or **[description]{.smallcaps}**.
-
-b. Make your edits then click **Save Changes** to apply your adjustments.
-
-
-#### Remove a dashboard
-
-a. To remove a dashboard, select **{{< fa trash-can >}} Delete**.
-
-b. After you confirm, your dashboard will be deleted.
-
-:::
-
-## Manage widgets
-
-Widgets display information at a glance on your dashboards.[^1]
-
-#### Widget types
-
-::: {.panel-tabset}
-
-##### {{< fa cubes >}} Model Inventory View
-Retrieves a saved model inventory view.[^2]
-
-##### {{< fa warning >}} Model Findings View
-Retrieves a saved findings view.[^3]
-
-##### {{< fa square-poll-vertical >}} Visualization
-Retrieves an analytics visualization.[^4]
-
-##### {{< fa table-cells-large >}} Other
-Retrieve a list of the latest model findings[^5] or recent activity.[^6]
-
-:::
-
-### Arrange widgets
-
-1. In the left sidebar, click **{{< fa home >}} Dashboard**.
-
-2. Click on the tab for the dashboard you would like to arrange widgets for.
-
-3. Click **{{< fa pencil >}} Edit Dashboard**.
-
-4.  Hover over the title of a widget until the **{{< fa hand>}}** appears.
-
-2. Click and drag to position your widget as desired.
-
-    To resize a widget, hover over the bottom-right corner of a widget until the **{{< fa hand>}}** appears, then adjust the dimensions to your liking. 
-
-### Add widgets
-
-1. In the left sidebar, click **{{< fa home >}} Dashboard**.
-
-2. Click on the tab for the dashboard you would like to add a widget to.
-
-3. Click **{{< fa pencil >}} Edit Dashboard**.
-
-4. Select **{{< fa plus >}} Add Widget**.
-
-5. Select the type of widget you'd like to add:[^7]
-
-    - **{{< fa cubes >}} Model Inventory View**
-    - **{{< fa warning >}} Model Findings View**
-    - **{{< fa square-poll-vertical >}} Visualization**
-    - **{{< fa table-cells-large >}} Other**
-
-6. On the modal that appears, configure the information retrieved by the widget: 
-
-    - **Model Inventory View** — Select a **[view name]{.smallcaps}** then cick **Add Model Inventory View**.
-    - **Model Findings View** — Select a **[view name]{.smallcaps}** then cick **Add Model Findings View**.
-    - **Analytics Visualization** — Select an **[analytics page]{.smallcaps}** and a **[visualization]{.smallcaps}** then click **Add Visualization**.
-    - **Other** — Select one of the **[widgets]{.smallcaps}** then click **Add Widget**.
-
-7. Confirm that your widget appears as expected. 
-
-    You can also rearrange the position of the widget to your liking.[^8]
-
-### Remove widgets
-
-::: {.callout-important title="Removal of widgets is permanent."}
-Removing a widget from a dashboard will not delete the linked view or analytics visualization. 
-
-:::
-
-1. In the left sidebar, click **{{< fa home >}} Dashboard**.
-
-2. Click on the tab for the dashboard you would like to remove widgets from.
-
-3. Click **{{< fa pencil >}} Edit Dashboard**.
-
-4. Hover over the widget you would like to remove.
-
-5. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Remove**]{.red}.
-
-6. After you confirm, your widget will be removed from your dashboard.
+<!-- ## Customize platform notifications -->
 
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage dashboards](#manage-dashboards)
-
-[^2]: [Manage custom inventory views](/guide/model-inventory/customize-model-inventory-layout.qmd#manage-custom-inventory-views)
-
-[^3]: [Customize model findings layout](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout)
-
-[^4]: [Working with analytics](/guide/reporting/working-with-analytics.qmd)
-
-[^5]: [Working with model findings](/guide/model-validation/working-with-model-findings.qmd)
-
-[^6]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
-
-[^7]: [Widget types](#widget-types)
-
-[^8]: [Arrange widgets](#arrange-widgets)
+<!-- [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd) -->
