WIP View platform notifications

--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -3,7 +3,7 @@ title: "Manage platform notifications"
 date: last-modified
 ---
 
-View <!-- and customize --> the notifications sent by the {{< var validmind.platform >}} to your organization's users.
+View <!-- and customize --> the notifications sent by the {{< var validmind.platform >}} to your organization's users. Notifications are sent both to user emails and to the in-{{< var vm.platform >}} inbox.
 
 :::{.callout}
 Changes are automatically saved to your account and do not affect other users.
@@ -20,6 +20,55 @@ Changes are automatically saved to your account and do not affect other users.
 
 ## View platform notifications
 
+::: {.callout}
+Unread {{< fa bell >}} Updates will be marked with a red [{{< fa circle >}}]{.red}.
+:::
+
+1. In the left sidebar, click **{{< fa bell >}} Updates**.
+
+2. Review these updates, complete actionable items, mark updates as read, or dismiss updates entirely:
+
+
+::: {.panel-tabset}
+
+### Review updates
+
+- Click **{{< fa filter >}} Filter** to narrow down the kinds of updates displayed:
+
+    - Select from the drop-down menu to filter between available platform notifications[^1] and click **Apply Filters**.
+    - Click **Show unread only** to only display unread updates.
+
+- To show older updates, scroll down to the bottom and click **Load More**.
+
+### Complete actionable updates
+
+- Updates with actionable steps are shown with an action button.
+- Click the button to perform the action.
+
+For example: To accept an invite to join an organization on {{< var vm.product >}}, click **Accept Invite**.
+
+### Mark updates as read
+
+### Dismiss updates
+
+:::
+
+#### Available platform notifications
+
+Mentions
+: test
+
+Model Invites
+: test
+
+Model Stage Updates
+: test
+
+Test Threshold Breaches
+: test
+
+
+
 <!-- CUSTOMIZATION DOESN'T EXIST YET -->
 
 <!-- ## Customize platform notifications -->
@@ -28,3 +77,5 @@ Changes are automatically saved to your account and do not affect other users.
 <!-- FOOTNOTES -->
 
 <!-- [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd) -->
+
+[^1]: [Available platform notifications](#available-platform-notifications)
