--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -26,8 +26,7 @@ Unread {{< fa bell >}} Updates will be marked with a red [{{< fa circle >}}]{.re
 
 1. In the left sidebar, click **{{< fa bell >}} Updates**.
 
-2. Review these updates, complete actionable items, mark updates as read, or dismiss updates entirely:
-
+2. From the in-{{< var vm.platform >}} inbox, review updates, accept invites, mark updates as read, or dismiss updates entirely.
 
 ::: {.panel-tabset}
 
@@ -35,30 +34,58 @@ Unread {{< fa bell >}} Updates will be marked with a red [{{< fa circle >}}]{.re
 
 - Click **{{< fa filter >}} Filter** to narrow down the kinds of updates displayed:
 
-    - Select from the drop-down menu to filter between available platform notifications[^1] and click **Apply Filters**.
+    - Filter between different in-{{< var vm.platform >}} notifications[^1] with the drop-down menu and click **Apply Filters**.
     - Click **Show unread only** to only display unread updates.
 
 - To show older updates, scroll down to the bottom and click **Load More**.
 
-### Complete actionable updates
+### Accept invites
 
-- Updates with actionable steps are shown with an action button.
-- Click the button to perform the action.
+Invites to join an organization offer the option to accept the invite from within the platform:
 
-For example: To accept an invite to join an organization on {{< var vm.product >}}, click **Accept Invite**.
+- Click **Accept Invite** to join the organization.
+- Accepting an invite will automatically mark the invitation notification as read.
 
 ### Mark updates as read
 
+To mark an individual update as read:
+
+a. Hover over the update you want to mark as read.
+
+b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **{{< fa envelope >}} Mark as Read**.
+
+To mark multiple updates as read:
+
+a. Click **{{< fa square-check >}} Select** to multi-select updates.
+
+b. Select the checkboxes for the updates you want to mark as read.
+
+c. At the bottom of the in-{{< var vm.platform >}} inbox, confirm the number of updates you've flagged to be marked as read, then select **{{< fa envelope >}} Mark as Read**.
+
 ### Dismiss updates
+
+To dismiss an individual update:
+
+a. Hover over the update you want to dismiss.
+
+b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **{{< fa bell-slash >}} Dismiss**.
+
+To dismiss all updates:
+
+a. Click **{{< fa square-check >}} Select** to multi-select updates.
+
+b. Select the checkboxes for the updates you want to dismiss.
+
+c. At the bottom of the in-{{< var vm.platform >}} inbox, confirm the number of updates you've flagged to be dismissed, then select **{{< fa bell-slash >}} Dismiss**.
 
 :::
 
-#### Available platform notifications
+#### In-platform notifications
 
 Mentions
 : test
 
-Model Invites
+Organization Invites
 : test
 
 Model Stage Updates
@@ -78,4 +105,4 @@ Test Threshold Breaches
 
 <!-- [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd) -->
 
-[^1]: [Available platform notifications](#available-platform-notifications)
+[^1]: [Available platform notifications](#in-platform-notifications)
