--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -41,7 +41,7 @@ Unread {{< fa bell >}} Updates will be marked with a red [{{< fa circle >}}]{.re
 
 ### Accept invites
 
-Invites to join an organization offer the option to accept the invite from within the platform:
+Invites to join a {{< var vm.product >}} organization offer the option to accept the invite from within the {{< var vm.platform >}}:
 
 - Click **Accept Invite** to join the organization.
 - Accepting an invite will automatically mark the invitation notification as read.
@@ -80,19 +80,19 @@ c. At the bottom of the in-{{< var vm.platform >}} inbox, confirm the number of 
 
 :::
 
-#### In-platform notifications
+#### In-platform notifications*
 
 Mentions
-: test
+: Comments where you are mentioned.
 
 Organization Invites
-: test
+: Invites to join a {{< var vm.product >}} organization.
 
 Model Stage Updates
-: test
+: Stage updates on your models.
 
 Test Threshold Breaches
-: test
+: Threshold breaches as defined by ongoing monitoring. 
 
 
 
