--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -34,7 +34,7 @@ Unread {{< fa bell >}} Updates will be marked with a red [{{< fa circle >}}]{.re
 
 - Click **{{< fa filter >}} Filter** to narrow down the kinds of updates displayed:
 
-    - Filter between different in-{{< var vm.platform >}} notifications[^1] with the drop-down menu and click **Apply Filters**.
+    - Filter between different in-{{< var vm.platform >}} notifications with the drop-down menu and click **Apply Filters**.
     - Click **Show unread only** to only display unread updates.
 
 - To show older updates, scroll down to the bottom and click **Load More**.
@@ -60,7 +60,7 @@ a. Click **{{< fa square-check >}} Select** to multi-select updates.
 
 b. Select the checkboxes for the updates you want to mark as read.
 
-c. At the bottom of the in-{{< var vm.platform >}} inbox, confirm the number of updates you've flagged to be marked as read, then select **{{< fa envelope >}} Mark as Read**.
+c. Confirm the number of updates you've flagged to be marked as read, then select **{{< fa envelope >}} Mark as Read**.
 
 ### Dismiss updates
 
@@ -76,25 +76,9 @@ a. Click **{{< fa square-check >}} Select** to multi-select updates.
 
 b. Select the checkboxes for the updates you want to dismiss.
 
-c. At the bottom of the in-{{< var vm.platform >}} inbox, confirm the number of updates you've flagged to be dismissed, then select **{{< fa bell-slash >}} Dismiss**.
+c. Confirm the number of updates you've flagged to be dismissed, then select **{{< fa bell-slash >}} Dismiss**.
 
 :::
-
-#### In-platform notifications*
-
-Mentions
-: Comments where you are mentioned.
-
-Organization Invites
-: Invites to join a {{< var vm.product >}} organization.
-
-Model Stage Updates
-: Stage updates on your models.
-
-Test Threshold Breaches
-: Threshold breaches as defined by ongoing monitoring. 
-
-
 
 <!-- CUSTOMIZATION DOESN'T EXIST YET -->
 
@@ -104,5 +88,3 @@ Test Threshold Breaches
 <!-- FOOTNOTES -->
 
 <!-- [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd) -->
-
-[^1]: [Available platform notifications](#in-platform-notifications)
