Address Jose Antonio's comment

--- a/site/guide/monitoring/set-thresholds-and-alerts.qmd
+++ b/site/guide/monitoring/set-thresholds-and-alerts.qmd
@@ -111,7 +111,9 @@ Here, the GINI score drops to `0.5`, breaching the threshold. This indicates pot
 :::: {.flex .flex-wrap .justify-around .w-100}
 
 ::: {.w-50-ns .pr2}
-If a logged metric breaches a threshold, alert notifications are triggered. 
+The `passed` boolean is determined by you, either through a custom function, such as `passed_fn` in the earlier example, or by assigning a value directly. This approach allows you to interpret the configured thresholds according to your own logic, rather than relying on automatic evaluation.
+
+A metric is considered to have breached a threshold when its value falls within the high or medium risk range, that is, when it is below the low risk threshold (in this example, below `0.8`). Breaching a threshold affects visual risk indicators and triggers alert notifications, independently of whether the passed flag is `True` or `False`.
 
 An email is sent to model stakeholders notifying them that the model has a metric that did not pass an ongoing monitoring threshold and requires attention.
 
