--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -80,6 +80,30 @@ c. Confirm the number of updates you've flagged to be dismissed, then select **{
 
 :::
 
+#### In-{{< var vm.platform >}} notifications* (WIP/TBD)
+
+Organization Invite*
+: As a logged in user I should get a notification when I get invited to another organization.
+
+Model Stakeholders*
+: As a logged in user I should get a notification whenever another user is added to any of the models I am a stakeholder in.
+
+Finding Assigned*
+: As a logged in user I should get a notification whenever a finding is assigned to me on any model.
+
+Comment Mentions*
+: As a logged in user I should get a notification whenever someone @ mentions me in a comment on any document.
+
+Model Stage Transition*
+: As a logged in user I should get a notification whenever a model I am a stakeholder in goes through a model stage transition.
+
+Monitoring Breach*
+: As a logged in user I should get a notification whenever test results in any model I am a stakeholder in breaches result thresholds.
+
+Broadcast Message*
+: As a logged in user I should get a notification whenever a workflow reaches a “Broadcast Step” and the step is configured to include my stakeholder role or organizational role as the recipient.
+
+
 <!-- CUSTOMIZATION DOESN'T EXIST YET -->
 
 <!-- ## Customize platform notifications -->
