--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -32,12 +32,17 @@ Unread {{< fa bell >}} Updates will be marked with a red [{{< fa circle >}}]{.re
 
 ### Review updates
 
-- Click **{{< fa filter >}} Filter** to narrow down the kinds of updates displayed:
+To filter updates:
 
-    - Filter between different in-{{< var vm.platform >}} notifications with the drop-down menu and click **Apply Filters**.
-    - Click **Show unread only** to only display unread updates.
+a. Click **{{< fa filter >}} Filter** to narrow down the kinds of updates displayed:
 
-- To show older updates, scroll down to the bottom and click **Load More**.
+    - Select between a select number of different in-{{< var vm.platform >}} notifications with the drop-down menu.[^1]
+    - Click **Show unread only** to display only unread updates.
+    - Click **Show dismissed only** to display only dismissed updates.
+
+b. Click **Apply Filters** to narrow down results based on your selections.
+
+To show older updates, scroll down to the bottom and click **Load More**.
 
 ### Accept invites
 
@@ -80,29 +85,19 @@ c. Confirm the number of updates you've flagged to be dismissed, then select **{
 
 :::
 
-#### In-{{< var vm.platform >}} notifications* (WIP/TBD)
+#### Available update filters
 
-Organization Invite*
-: As a logged in user I should get a notification when I get invited to another organization.
+Mentions
+: Comments you're mentioned in.[^2]
 
-Model Stakeholders*
-: As a logged in user I should get a notification whenever another user is added to any of the models I am a stakeholder in.
+Model Invites
+: Stakeholders added to your models.[^3]
 
-Finding Assigned*
-: As a logged in user I should get a notification whenever a finding is assigned to me on any model.
+Model Stage Updates
+: Model stage transitions on your models.[^4]
 
-Comment Mentions*
-: As a logged in user I should get a notification whenever someone @ mentions me in a comment on any document.
-
-Model Stage Transition*
-: As a logged in user I should get a notification whenever a model I am a stakeholder in goes through a model stage transition.
-
-Monitoring Breach*
-: As a logged in user I should get a notification whenever test results in any model I am a stakeholder in breaches result thresholds.
-
-Broadcast Message*
-: As a logged in user I should get a notification whenever a workflow reaches a “Broadcast Step” and the step is configured to include my stakeholder role or organizational role as the recipient.
-
+Test Threshold Breaches
+: Logged metric threshold breaches on your models.[^5]
 
 <!-- CUSTOMIZATION DOESN'T EXIST YET -->
 
@@ -112,3 +107,13 @@ Broadcast Message*
 <!-- FOOTNOTES -->
 
 <!-- [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd) -->
+
+[^1]: [Available update filters](#available-update-filters)
+
+[^2]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+
+[^3]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
+
+[^4]: [Working with workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+
+[^5]: [Set thresholds and alerts](/guide/monitoring/set-thresholds-and-alerts.qmd)
