--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -21,7 +21,7 @@ Changes are automatically saved to your account and do not affect other users.
 ## View platform notifications
 
 ::: {.callout}
-Unread {{< fa bell >}} Updates will be marked with a red [{{< fa circle >}}]{.red}.
+Unread {{< fa bell >}} Updates will be marked with a [pink {{< fa circle >}}]{.pink}.
 :::
 
 1. In the left sidebar, click **{{< fa bell >}} Updates**.
