--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -96,8 +96,11 @@ Model Invites
 Model Stage Updates
 : Model stage transitions on your models.[^4]
 
+Organization Invites
+: Invitations to join {{< var vm.product >}} organizations.[^5]
+
 Test Threshold Breaches
-: Logged metric threshold breaches on your models.[^5]
+: Logged metric threshold breaches on your models.[^6]
 
 <!-- CUSTOMIZATION DOESN'T EXIST YET -->
 
@@ -116,4 +119,6 @@ Test Threshold Breaches
 
 [^4]: [Working with workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
-[^5]: [Set thresholds and alerts](/guide/monitoring/set-thresholds-and-alerts.qmd)
+[^5]: [Manage users](/guide/configuration/manage-users.qmd#manage-user-invitations)
+
+[^6]: [Set thresholds and alerts](/guide/monitoring/set-thresholds-and-alerts.qmd)
