Hiding accept invites for now

--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -36,7 +36,7 @@ To filter updates:
 
 a. Click **{{< fa filter >}} Filter** to narrow down the kinds of updates displayed:
 
-    - Select between a select number of different in-{{< var vm.platform >}} notifications with the drop-down menu.[^1]
+    - Select between a number of different in-{{< var vm.platform >}} notifications with the drop-down menu.[^1]
     - Click **Show unread only** to display only unread updates.
     - Click **Show dismissed only** to display only dismissed updates.
 
@@ -44,12 +44,14 @@ b. Click **Apply Filters** to narrow down results based on your selections.
 
 To show older updates, scroll down to the bottom and click **Load More**.
 
-### Accept invites
+<!-- AS PER NATE THE BELOW IS NOT LIVE YET -->
+
+<!-- ### Accept invites
 
 Invites to join a {{< var vm.product >}} organization offer the option to accept the invite from within the {{< var vm.platform >}}:
 
 - Click **Accept Invite** to join the organization.
-- Accepting an invite will automatically mark the invitation notification as read.
+- Accepting an invite will automatically mark the invitation notification as read. -->
 
 ### Mark updates as read
 
