File rename, change how we embed the REST API landing page

--- a/site/reference/validmind-rest-apis.qmd
+++ b/site/reference/validmind-rest-apis.qmd
@@ -1,5 +1,5 @@
 ---
-title: "REST API Reference"
+title: "{{< var vm.product >}} REST APIs"
 date: last-modified
 listing:
   - id: api-reference-listing
@@ -17,7 +17,7 @@ listing:
         path: admin-api.qmd
 ---
 
-This page contains reference documentation for the ValidMind REST APIs.
+The {{< var validmind.platform >}} provides RESTful APIs for interacting with organizational resources and managing administrative configurations, supporting different levels of access and functionality.
 
 ::: {.panel-tabset}
 
