Setup for inventory field groups

--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -9,6 +9,7 @@ To add a new field, click **{{< fa plus >}} Add Field**:
 a. Fields require a [type]{.smallcaps},^[[Field types](#field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
 
     - (Optional) You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
+    - (Optional) You can also assign a field to a group.[^field-groups]
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-fields]
 
 a. When you are satisfied with the setup of your field, click **Save**.
@@ -27,6 +28,8 @@ a. Make your desired changes to your field, then click **Save**.
 
 
 <!-- ADDITIONAL FOOTNOTES -->
+
+[^field-groups]: [Add groups](#field-groups)
 
 [^edit-fields]:
 
@@ -54,6 +57,7 @@ a. Make your desired changes to your field, then click **Save**.
 1. Fields require a [type]{.smallcaps}, a [name]{.smallcaps}, and a [description]{.smallcaps}.
 
     - (Optional) You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
+    - (Optional) You can also assign a field to a group.
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.
 
 1. When you are satisfied with the setup of your field, click **Save**.
