--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -18,6 +18,7 @@ aliases:
 :::
 
 ## Add or edit inventory fields
+<span id="add-edit"></span>
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -72,6 +73,21 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 
 :::
 
+## Add model groups
+<span id="field-groups">
+
+To group model inventory fields, first create a model group:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Models, select **Model Inventory Fields**.
+
+3. Click **{{< fa plus >}} Add Group** and enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}** for the group.
+
+4. Click **Create Group** to add the new group.
+
+5. Assign the desired fields to the group.[^5]
+
 ## Delete inventory fields
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
@@ -98,3 +114,6 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 [^3]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
 
 [^4]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+[^5]: [Add or edit inventory fields](#add-edit)
+
